# OpenView

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
renderer_engine/: CMakeLists.txt  vcpkg.json
renderer_engine/GraphicPipeline/: CMakeLists.txt  GraphicPipeline.cpp  GraphicPipeline.hpp
renderer_engine/GraphicPipeline/Shader/: Shader.cpp  Shader.hpp
renderer_engine/GraphicPipeline/VertexShader/: VertexShader.cpp  VertexShader.hpp
renderer_engine/WindowManager/: CMakeLists.txt  WindowManager.cpp  WindowManager.hpp
renderer_engine/assets/shaders/: fragment_shader.glsl
renderer_engine/src/: main.cpp
src/: main.cpp
